--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
 	"name": "csv_reader",
 	"version": "1.0.0",
 	"description": "This is a nodejs application for reading csv and process its data",
-	"main": "server.js",
+	"main": "./build/app.js",
 	"scripts": {
+		"test": "jest",
 		"start": "npm run build && node ./build/app.js",
 		"dev": "ts-node ./src/app.ts",
 		"clean": "rimraf ./build",
@@ -11,7 +12,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "rimraf ./build"
+		"url": "https://github.com/mdasifj625/csv_reader_with_console.git"
 	},
 	"keywords": [
 		"CSV Reader"
@@ -23,10 +24,12 @@
 		"inquirer": "^8.2.5"
 	},
 	"devDependencies": {
+		"@jest/globals": "^29.4.3",
 		"@types/inquirer": "^8.2.6",
 		"@types/node": "^18.14.1",
-		"ts-node": "^10.9.1",
 		"rimraf": "^4.1.2",
+		"ts-jest": "^29.0.5",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5"
 	}
 }
